2006-07-07  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/log.c: Fixed some struct arithmetic which ended up
	in writing into already freed memory.

2006-07-06  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/nsdb.text: Updated with new error message

	* include/ns.h:
	* nsd/conn.c:
	* nsd/queue.c:
	* nsd/return.c: Make ns_conn keepliave 0|1 to enable or 
	disable keep-alive on current connection. Removed flag 
	NS_CONN_KEEPALIVE and instead connPtr->keep is used to 
	control keepailve behaviour.
	
2006-07-05  Bernd Eidenschink  <eide@users.sourceforge.net>

	* contrib/start-scripts/naviserver.SuSE: Added start script
	suitable for /etc/init.d which implements start, stop, restart,
	try-restart, realstop, version, probe, status. Configurable
	for use with or without watchdog and chroot environment.

2006-07-05  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/ns.h: Fixed so the compilation works again after
	cache.c and related changes.

	* nsd/log.c: Uses Ns_Fatal wrapper for Ns_SetLogFlushProc
	and Ns_SetNsLogProc

2006-07-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclcallbacks.c: Use our own wrapper Ns_TclCallbackProc()
	in ShutdownProc(). 

	* include/ns.h: Some cosmetic formatting to honour the 80-chars
	margin-width. Declared Ns_SetLogFlushProc() and Ns_SetNsLogProc()
	deprecated in favour of Ns_AddLogFilter() and Ns_RemoveLogFilter().

	* nsd/log.c: Make Ns_SetLogFlushProc() and Ns_SetNsLogProc() issue
	fatal message when used. Added Ns_AddLogFilter() and 
	Ns_RemoveLogFilter() C-API calls as hook into new log processing.
	The log processing/cache is now always handled by the server. Users
	can register log callbacks and those will be invoked in the LIFO
	fashion for each log entry added by the Ns_Log() function or
	[ns_log] Tcl command. Each callback can prevent execution of all
	registered callbacks below by triggering Tcl error. One predefined